--- a/src/css/style.css
+++ b/src/css/style.css
@@ -283,11 +283,12 @@ nav{
     font-weight: bold;
 }
 .cases input:hover{
-     transition: 0.2s;
+    transition: 0.2s;
     transform: scale(1.1);
 }
 .cases input:active{
     transition: 0.05s;
+    transform: scale(0.9);
 }
 .cost_calculation{
     height: 930px;
