--- a/src/css/animation.css
+++ b/src/css/animation.css
@@ -4,7 +4,7 @@ import 'animate.css';
     color: #fff;
 }
 .menu a:hover{
-    color: #fff;
+    color: #ddd;
 }
 .menu a:visited {
     color: #fff;
