--- a/src/css/style_index.css
+++ b/src/css/style_index.css
@@ -1,3 +1,7 @@
+a{
+    color: #fff;
+}
+
 body {
     font-family: "FranklinGot", sans-serif;
 }
@@ -6,10 +10,6 @@ header {
     position: fixed;
     width: 100%;
     z-index: 99;
-}
-
-a{
-    color: #fff;
 }
 
 .orange-line {
@@ -47,7 +47,7 @@ header li{
     line-height: 60px;
     margin-right: 30px;
     font-size: 13px;
-    color: #fff;
+    color: #eee;
     text-transform: uppercase;
     text-decoration: none;
 }
@@ -57,11 +57,11 @@ header a {
     line-height: 60px;
     font-size: 13px;
     text-transform: uppercase;
+    color: red;
 }
 
-
 header a:visited {
-    color: #fff;
+    color: #ddd;
 }
 
 .header {
@@ -334,7 +334,7 @@ h1 {
     width: 100%;
     height: 40px;
     border-radius: 3px;
-    color: #9c9c9c;
+    color: #666;
     font-size: 13px;
     padding-left: 15px;
 }
@@ -433,6 +433,7 @@ h1 {
     color: #172c40;
     padding-top: 90px;
     padding-bottom: 50px;
+    font-size: 13px;
 }
 
 .reviews-container hr {
@@ -442,9 +443,15 @@ h1 {
 .reviews-container img {
     margin-bottom: 20px;
 }
+.carousel-inner p, .carousel-inner h5{
+    color: #1a2e43;
+}
+.carousel-inner img{
+    
+}
 
-.reviews-container {
-    font-size: 13px;
+.owl-carousel, .carousel-item{
+    display: block;
 }
 
 .contacts-section {
