--- a/src/css/test.css
+++ b/src/css/test.css
@@ -1,7 +1,13 @@
-.number{
-    line-height: 100px;
-    font-size: 20px;
-    border: 1px solid #ccc;
-    height: 100px;
-    width: 100px;
+.carousel-item {
+    border: 1px solid black;
+    background: #EEEEEE;
+    font-size: 23px;
+    padding: 100px 20px;
+    text-align: center;
+    box-sizing: border-box;
+    cursor: grab;
+    position: relative;
+    height: 230px;
+    overflow-wrap: break-word;
+    display: block;
 }
